adding sendmail.js updated URL

--- a/index.htm
+++ b/index.htm
@@ -1,7 +1,7 @@
 <html>
    <body>
       
-      <form action = "process_get_form" method = "GET">
+      <form action = "/process_get_form" method = "GET">
          First Name: <input type = "text" name = "first_name">  <br>
          Last Name: <input type = "text" name = "last_name">
          <input type = "submit" value = "Submit">
