adding all fields

--- a/index.htm
+++ b/index.htm
@@ -1,11 +1,52 @@
 <html>
-   <body>
-      
-      <form action = "/process_get_form" method = "GET">
-         First Name: <input type = "text" name = "first_name">  <br>
-         Last Name: <input type = "text" name = "last_name">
-         <input type = "submit" value = "Submit">
-      </form>
-      
-   </body>
+
+<head>
+
+<style>
+	body {
+	  padding: 30px;
+	  background-color: white;
+	}
+	h1{
+	  margin: 0 auto;
+	}
+	h2{
+	  font-family: Arial;
+	  font-weight: bold;
+	  margin: 0 auto;
+	}
+	.center-div{
+  	  margin: 0 auto;
+  	  width: 400px;
+  	  height: 400px;
+  	  border-radius: 3px;
+	}
+	#rcorners4 {
+      	  border-radius: 15px;
+    	  background: #33ccff;
+    	  padding: 20px; 
+    	  width: 340px;
+    	  height: 40px; 
+	}
+
+</style>	
+
+</head>
+
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+   	<body>
+	
+	<div class="center-div"> 
+
+		<img src="file:///C:/Users/m3tli/lpsppwv2/lps.png" ></img>		
+
+      		<form action = "/process_get_veeder" method = "GET">
+         		<h2>REGULAR: <input type = "text" name = "tc_vol_reg"></h2><br>
+         		<h2>SUPER: <input type = "text" name = "tc_vol_sup"></h2><br>
+			<h2>DIESEL: <input type = "text" name = "tc_vol_die"></h2><br>
+         		<input type = "submit" value = "Submit">
+      		</form>
+	  </div>      
+   	</body>
 </html>
