--- a/index.htm
+++ b/index.htm
@@ -39,7 +39,7 @@
 	
 	<div class="center-div"> 
 
-		<img src="file:///C:/Users/m3tli/lpsppwv2/lps.png" ></img>		
+		<img src="/images/lps.png" ></img>		
 
       		<form action = "/process_get_veeder" method = "GET">
          		<h2>REGULAR: <input type = "text" name = "tc_vol_reg"></h2><br>
